test/vm/errors/compiler/selective_import_not_exported.ach
// Compiler error: importing a name that is not exported
// Expected: error "does not export"

import { nonexistent } from "../../../modules/utils.ach"
